2011-02-25  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_alerts.php: Deleted 'module_action_threshold'.
	It's a version 4.0 feature.
	(Fixed alert action addition does not work.)

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* pandora_console.redhat.spec: Removed PEAR dependencies.

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control, DEBIAN/postinst, pandora_console.spec: Removed PEAR
	  dependencies.

2011-02-23  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager/lib/libupdate_manager_client.php
	extensions/update_manager/main.php: Fixed force bit for
	offline updates and restore sql begin and commit

2011-02-23  Sergio Martin <sergio.martin@artica.es>

	* extensions/update_manager.php
	extensions/update_manager/lib/libupdate_manager_client.php
	extensions/update_manager/lib/libupdate_manager.php
	extensions/update_manager/main.php: Fixed some bugs of the 
	open update manager like connection fail or auth messages, 
	cleaning cache when update to show correct data, etc.

2011-02-23 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* pandora_console/include/functions_db.php: fixed in the function
	"get_agent_modules" extract the agents when the current user user is admin.

2011-02-23  Sergio Martin <sergio.martin@artica.es>

	* include/languages/es.po
	include/languages/es.mo
	include/languages/ja.po
	include/languages/ja.mo: Added seven latest strings
	form launchpad

2011-02-23 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* pandora_console/operation/events/events_list.php: fixed the show html
	entities.

2011-02-23 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/javascript/pandora_modules.js: fixed the disabled button snmp when
	change any parameter of snmp.
	
	Fixes: #3168685

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_ui.php: Merged from trunk. Call safe_output instead
	  of safe_output_html.
